objects/Product_Sales_for_1997__x.object
<CustomObject>
    <description>Product_Sales_for_1997</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Product_Sales_for_1997</externalName>
    <fields>
        <fullName>CategoryName__c</fullName>
        <description>CategoryName</description>
        <externalDeveloperName>CategoryName</externalDeveloperName>
        <label>CategoryName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>ProductName</description>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>ProductName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSales__c</fullName>
        <description>ProductSales</description>
        <externalDeveloperName>ProductSales</externalDeveloperName>
        <label>ProductSales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Product_Sales_for_1997</label>
    <pluralLabel>Product_Sales_for_1997</pluralLabel>
</CustomObject>